--- a/monitoring/uss_qualifier/configurations/dev/geospatial_comprehension.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/geospatial_comprehension.yaml
@@ -4,14 +4,19 @@ v1:
     resources:
       resource_declarations:
         example_feature_check_table: {$ref: 'library/resources.yaml#/example_feature_check_table'}
+
+        utm_auth: {$ref: 'library/environment.yaml#/utm_auth'}
+        geospatial_info_provider: {$ref: 'library/environment.yaml#/geospatial_info_provider'}
     action:
       test_scenario:
         scenario_type: scenarios.interuss.geospatial_map.GeospatialFeatureComprehension
         resources:
+          geospatial_info_provider: geospatial_info_provider
           table: example_feature_check_table
     execution:
       stop_fast: true
   artifacts:
     raw_report: {}
+    sequence_view: {}
   validation:
     $ref: ./library/validation.yaml#/normal_test
