--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ google-auth==1.6.3
 graphviz==0.20.1  # uss_qualifier
 gunicorn==20.1.0
 implicitdict==2.3.0
+jsonnet==0.20.0
 jsonschema==4.17.3  # uss_qualifier
 jwcrypto==1.5.6
 kubernetes==23.3.0  # deployment_manager
