--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ bc-jsonpath-ng==1.5.9  # uss_qualifier
 cryptography==42.0.4
 faker===8.1.0  # uss_qualifier
 flask==2.3.3
-Flask-HTTPAuth==4.8.0  # mock_uss tracer
+Flask-Login==0.6.3  # mock_uss tracer
 geojson===2.5.0  # uss_qualifier
 gevent==22.10.2  # mock_uss / gunicorn worker
 google-auth==1.6.3
@@ -25,6 +25,7 @@ loguru==0.6.0
 lxml==4.9.1
 marko==1.2.2  # uss_qualifier
 numpy==1.24.4
+oauthlib==3.2.2  # mock_uss tracer
 pem==21.2.0  # deployment_manager
 psycopg[binary]==3.1.18  # PostgreSQL/CockroachDB lib
 pvlib==0.10.1
