--- a/monitoring/mock_uss/docker-compose.yaml
+++ b/monitoring/mock_uss/docker-compose.yaml
@@ -274,6 +274,25 @@ services:
       - '' # starts when no profile is provided
       - scd
 
+  mock_uss_tls_proxy:
+    container_name: mock_uss_tls_proxy
+    hostname: tls_proxy.localutm
+    image: nginx:1.25
+    ports:
+      - 4430:443
+    volumes:
+      - ./tls_proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./tls_proxy/localhost.crt:/etc/certs/localhost.crt:ro
+      - ./tls_proxy/localhost.key:/etc/certs/localhost.key:ro
+    restart: always
+    networks:
+      - interop_ecosystem_network
+    profiles:
+      - '' # starts when no profile is provided
+      - scd
+      - rid
+      - rid_v19
+
 networks:
   interop_ecosystem_network:
     external: true
