[uss_qualifier] Constraint reference synchronization scenario

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -66,6 +66,7 @@ v1:
               # ASTM F3548-21 USS emulation roles
               - utm.strategic_coordination
               - utm.availability_arbitration
+              - utm.constraint_management
               # For authentication test purposes.
               # Remove if the authentication provider pointed to by AUTH_SPEC does not support it.
               - ""
