Update datetime approach and change StartOfTestRun to StartOfScenario (#16)
These suggestions for [650 on the interuss
repo](https://github.com/interuss/monitoring/pull/650) primarily:

* Adjust the datetime comparison approach -- we don't want to mess with
time zones, or generally Python's suboptimal time treatment; we can
leave that to the `arrow` module we already import and use for many
other similar things
* Expand and make public the function to compute an end time of volume
or volumes
* Change StartOfTestRun to StartOfScenario in most test data -- I think
this is the most likely thing to fix most of the problems as it
decouples timing for a scenario from the rest of the scenarios in a test
suite/run

--- a/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_auths.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_auths.yaml
@@ -25,7 +25,7 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  time_during_test: StartOfTestRun
+                  time_during_test: StartOfScenario
                 offset: -1s
             duration: 5m
 
