--- a/monitoring/uss_qualifier/test_data/flight_intents/standard/non_conflicting.yaml
+++ b/monitoring/uss_qualifier/test_data/flight_intents/standard/non_conflicting.yaml
@@ -24,7 +24,7 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  time_during_test: StartOfTestRun
+                  time_during_test: StartOfScenario
                 offset: -1s
             duration: 5m
 
@@ -59,7 +59,7 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  time_during_test: StartOfTestRun
+                  time_during_test: StartOfScenario
                 offset: -1s
             duration: 5m
 
