--- a/monitoring/uss_qualifier/test_data/flight_intents/standard/invalid_flight_intents.yaml
+++ b/monitoring/uss_qualifier/test_data/flight_intents/standard/invalid_flight_intents.yaml
@@ -24,9 +24,9 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  time_during_test: StartOfTestRun
+                  time_during_test: StartOfScenario
                 offset: -1s
-            duration: 5m
+            duration: 10m
 
       astm_f3548_21:
         priority: 0
@@ -51,7 +51,7 @@ intents:
             - start_time:
                 offset_from:
                   starting_from:
-                    time_during_test: StartOfTestRun
+                    time_during_test: StartOfScenario
                   offset: 32d
 
   invalid_recently_ended:
