--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -11,6 +11,12 @@ resources:
   problematically_big_area: resources.VerticesResource
 actions:
   - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.OpIntentReferenceStateTransitions
+      resources:
+        dss: dss
+        flight_intents: flight_intents
+        id_generator: id_generator
+  - test_scenario:
       scenario_type: scenarios.astm.utm.dss.SubscriptionInteractionsDeletion
       resources:
         dss: dss
