--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -11,6 +11,12 @@ resources:
   problematically_big_area: resources.VerticesResource
 actions:
   - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.synchronization.USSAvailabilitySynchronization
+      resources:
+        dss: dss
+        other_instances: all_dss_instances
+        client_identity: utm_client_identity
+  - test_scenario:
       scenario_type: scenarios.astm.utm.dss.OpIntentReferenceStateTransitions
       resources:
         dss: dss
