--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -67,6 +67,7 @@ v1:
               - utm.strategic_coordination
               - utm.availability_arbitration
               - utm.constraint_management
+              - utm.conformance_monitoring_sa
               # For authentication test purposes.
               # Remove if the authentication provider pointed to by AUTH_SPEC does not support it.
               - ""
