--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          submodules: true
           fetch-depth: 0
 
       - name: Log in to Docker Hub
