--- a/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
+++ b/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
@@ -29,6 +29,7 @@ actions:
       non_conflicting_flights: non_conflicting_flights
       priority_preemption_flights: priority_preemption_flights
       flight_planners: flight_planners
+      flight_planners_to_clear: flight_planners
       nominal_planning_selector: combination_selector
       invalid_flight_intents: invalid_flight_intents
       priority_planning_selector: combination_selector
