--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -29,6 +29,7 @@ actions:
       invalid_flight_intents: invalid_flight_intents
       non_conflicting_flights: non_conflicting_flights
       flight_planners: flight_planners?
+      flight_planners_to_clear: flight_planners?
       mock_uss: mock_uss
       dss: dss
       dss_instances: dss_instances
