--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -18,6 +18,7 @@ v1:
           test_env_version_providers: test_env_version_providers
           prod_env_version_providers: prod_env_version_providers
           flight_planners: flight_planners
+          flight_planners_to_clear: flight_planners
           conflicting_flights: conflicting_flights
           invalid_flight_intents: invalid_flight_intents
           non_conflicting_flights: non_conflicting_flights
@@ -36,6 +37,7 @@ v1:
       - v1.test_run.resources.resource_declarations.second_utm_auth
       - v1.test_run.resources.resource_declarations.test_env_version_providers
       - v1.test_run.resources.resource_declarations.flight_planners
+      - v1.test_run.resources.resource_declarations.flight_planners_to_clear
       - v1.test_run.resources.resource_declarations.dss
       - v1.test_run.resources.resource_declarations.dss_instances
       - v1.test_run.resources.resource_declarations.mock_uss
