--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -39,7 +39,7 @@ jobs:
           fetch-depth: 0
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@dd4fa0671be5250ee6f50aedf4cb05514abda2c7  # v1.14.1
         with:
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
