--- a/requirements.in
+++ b/requirements.in
@@ -7,6 +7,10 @@
 # When adding a dependency, the version should usually be specified exactly to
 # avoid breakages when new versions are released.
 
+# To autogenerate requirements.txt from this file, run `make requirements.txt`
+# from this working directory.  To upgrade all dependencies, run
+# `make upgrade-requirements`.
+
 aiohttp==3.11.11
 arrow==1.1.0
 bc-jsonpath-ng==1.5.9  # uss_qualifier
@@ -32,6 +36,7 @@ numpy==1.26.4
 oauthlib==3.2.2  # mock_uss tracer
 pem==21.2.0  # deployment_manager
 psycopg[binary]==3.1.18  # PostgreSQL/CockroachDB lib
+pip-tools==7.4.1  # Building requirements.txt from requirements.in
 pvlib==0.10.1
 pyjwt==2.4.0
 pykml==0.2.0
