--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -19,6 +19,7 @@ v1:
         mock_uss_instance_sp_v19: {$ref: 'library/environment.yaml#/mock_uss_instance_sp_v19'}
 
         test_exclusions: { $ref: 'library/resources.yaml#/test_exclusions' }
+        uss_identification: { $ref: 'library/environment.yaml#/uss_identification' }
     non_baseline_inputs:
       - v1.test_run.resources.resource_declarations.utm_auth
       - v1.test_run.resources.resource_declarations.netrid_service_providers_v19
@@ -40,6 +41,7 @@ v1:
           service_area: kentland_service_area
           problematically_big_area: au_problematically_big_area
           test_exclusions: test_exclusions
+          uss_identification: uss_identification
     execution:
       stop_fast: true
   artifacts:
